--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-native-animatable": "^1.3.2",
         "react-native-axios": "^0.17.1",
         "react-native-expo-image-cache": "^4.0.8",
+        "react-native-extended-stylesheet": "^0.12.0",
         "react-native-gesture-handler": "1.3.0",
         "react-native-reanimated": "1.1.0",
         "react-native-vector-icons": "^6.6.0",
