--- a/app.json
+++ b/app.json
@@ -9,9 +9,8 @@
         "orientation": "portrait",
         "icon": "./assets/icon.png",
         "splash": {
-            "image": "./assets/splash.png",
-            "resizeMode": "cover",
-            "backgroundColor": "#242424"
+            "image": "./assets/images/splash.png",
+            "backgroundColor": "#131c23"
         },
         "updates": {
             "fallbackToCacheTimeout": 0
