--- a/package.json
+++ b/package.json
@@ -26,22 +26,23 @@
         "eslint-config-airbnb": "^18.0.1",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
-        "expo": "^34.0.1",
-        "expo-blur": "^6.0.0",
-        "expo-facebook": "~6.0.0",
-        "expo-font": "^6.0.1",
+        "expo": "^35.0.0",
+        "expo-blur": "~7.0.0",
+        "expo-facebook": "~7.0.0",
+        "expo-font": "~7.0.0",
         "moment": "^2.24.0",
         "react": "16.8.3",
-        "react-dom": "^16.8.6",
-        "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+        "react-dom": "16.8.3",
+        "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
         "react-native-animatable": "^1.3.2",
         "react-native-axios": "^0.17.1",
         "react-native-expo-image-cache": "^4.0.8",
         "react-native-extended-stylesheet": "^0.12.0",
-        "react-native-gesture-handler": "1.3.0",
-        "react-native-reanimated": "1.1.0",
+        "react-native-gesture-handler": "~1.3.0",
+        "react-native-reanimated": "~1.2.0",
+        "react-native-svg": "~9.9.2",
         "react-native-vector-icons": "^6.6.0",
-        "react-native-web": "^0.11.4",
+        "react-native-web": "^0.11.7",
         "react-navigation": "^4.0.3",
         "react-navigation-stack": "^1.7.3",
         "react-redux": "^7.1.1",
@@ -52,11 +53,13 @@
     "devDependencies": {
         "@types/react": "^16.8.23",
         "@types/react-native": "^0.57.65",
-        "babel-preset-expo": "^6.0.0",
+        "babel-plugin-inline-import": "^3.0.0",
+        "babel-preset-expo": "^7.0.0",
         "eslint": "^6.3.0",
         "eslint-plugin-react": "^7.14.3",
         "husky": "^3.0.5",
         "lint-staged": "^9.3.0",
+        "react-native-svg-transformer": "^0.13.0",
         "typescript": "^3.4.5"
     },
     "private": true
